# magql

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.md  CHANGES.rst  LICENSE.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  noxfile.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yaml  tests.yaml
docs/: Makefile  api.md  changes.md  conf.py  convert.rst  get_type.rst  gqlmagic.rst  index.md  index.rst  make.bat  references.md  resolvers.md  resolvers.rst  scalars.md  start.md  validation.md
examples/calculator/: .flaskenv  README.md  calculator.py  pyproject.toml
examples/tasks/: .flaskenv  README.md  pyproject.toml  tasks.py
examples/upload/: .flaskenv  README.md  pyproject.toml  upload.py
requirements/: build.txt  dev.in  dev.txt  docs.in  docs.txt  tests.txt  types.in  types.txt  typing.in  typing.txt
src/magql/: __init__.py  check_delete.py  convert.py  converter.py  definitions.py  errors.py  filter.py  filters.py  flask_magql.py  flask_magql_utils.py  get_type.py  logging.py  magql_filter.py  magql_logging.py  magql_manager.py  magql_type.py  manager.py  nodes.py  resolver_factory.py  scalars.py  schema.py  search.py  sort.py  testing.py  type.py  validation.py  validator.py  validators.py
src/magql/core/: check_delete.py  filters.py  nodes.py  scalars.py  schema.py  search.py
src/magql/sqlalchemy/: __init__.py  check_delete.py  filters.py  manager.py  pagination.py  resolvers.py  search.py  validators.py
tests/: conftest.py  test_convert.py  test_description.py  test_get_types.py  test_manager.py  test_name_validation.py  test_nodes.py  test_resolver.py  test_resolvers.py  test_scalars.py  test_schema.py  test_type_refs.py  test_validations.py  test_validators.py  todo.txt
tests/test_validation/: test_argument_validation.py  test_complex_validation.py  test_field_validation.py  test_inputfield_validation.py  test_inputobject_validation.py  test_validators.py
tests/test_validations/: test_Length.py  test_validation_Argument.py  test_validation_InputField.py  test_validations.py  test_vals.py
