[project]
name = "magql"
version = "1.0.0.dev"
description = "The magical GraphQL framework that generates an API for your data."
readme = "README.md"
license = {file = "LICENSE.md"}
authors = [{name = "David Lord", email = "davidism@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "graphql-core>=3",
    "python-dateutil",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = [
    "docs/",
    "requirements/",
    "tests/",
    "CHANGES.md",
    "tox.ini",
]
exclude = ["docs/_build/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error",
]

[tool.coverage.run]
branch = true
source = ["magql", "tests"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.mypy]
python_version = "3.10"
files = ["src/magql", "tests"]
show_error_codes = true
pretty = true
strict = true
