[metadata]
name = magql
version = 0.6.0
url = https://github.com/autoinvent/magql
license = BSD-3-Clause
license_file = LICENSE.rst
description = The magical GraphQL framework that generates an API for your data.
long_description = file:README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
package_dir = =src
include_package_data = True
python_requires = >=3.6
# install_requires is in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    error
    ignore:Dialect sqlite.*Decimal:sqlalchemy.exc.SAWarning

[coverage:run]
branch = True
source =
    magql
    tests

[coverage:paths]
source =
    src
    */site-packages

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
select = B, E, F, W, B9
ignore =
    # slice notation whitespace, invalid
    E203
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80

[mypy]
files = src/magql
python_version = 3.8
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
no_implicit_optional = True
local_partial_types = True
no_implicit_reexport = True
strict_equality = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True
warn_return_any = True
warn_unreachable = True

[mypy-sqlalchemy.*]
ignore_missing_imports = True

[mypy-sqlalchemy_utils.*]
ignore_missing_imports = True
