[project]
name = "magql-example-upload"
version = "1.0.0"
description = "Upload and download files in a GraphQL API with Magql."
dependencies = [
    "magql",
    "flask",
    "flask-magql",
    "magql-sqlalchemy",
    "flask-sqlalchemy-lite",
    "python-dotenv",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "upload"
